--- a/workinghours.ipynb
+++ b/workinghours.ipynb
@@ -1,30 +1,21 @@
-## Application for recording working hours
-* Define DATA_DIR
-•Make sure 'output.xls' is not open while executing this code
-•Make sure to click enter after inserting the row to be evaluated
-•Format of time in excel file: 15min=0,25, 30min=0,5, 45min=0,75
-•Record every working day (if holiday then 'H' in the start time column)
-•In output.xls you may have to set first column to 'date'
-
-
-# Import libraries
-import os
-import datetime
-import xlrd
-import xlwt
-from xlrd import open_workbook
-from xlutils.copy import copy
-import matplotlib.pyplot as plt; plt.rcdefaults()
-import matplotlib.pyplot as plt
-import numpy as np
-import datetime
-#from pylab import *
-#import sys
-#from numpy import *    ### these three lines don't go with line: output_book = xlrd.open_workbook(OUTPUT_FILE)
-
-#Define input and output
-DATA_DIR = 'C:/Users/aschwenk/Tasks/Arbeitszeiten/real/'
-WORKINGHOURS_FILE = os.path.join(DATA_DIR, 'workinghours.xls')
-OUTPUT_FILE = os.path.join(DATA_DIR, 'output.xls')
-selected_row_shift = int(input("Please type in the row you want to evaluate: ")) 
-selected_row = selected_row_shift-1  
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Application for recording working hours\n",
+    "\n",
+    "* Define DATA_DIR\n",
+    "* Make sure 'output.xls' is not open while executing this code\n",
+    "* Make sure to click enter after inserting the row to be evaluated\n",
+    "* Format of time in excel file: 15min=0,25, 30min=0,5, 45min=0,75\n",
+    "* Record every working day (if holiday then 'H' in the start time column)\n",
+    "* In output.xls you may have to set first column to 'date'\n",
+    "\n",
+   ]
+  },
