--- a/workinghours.ipynb
+++ b/workinghours.ipynb
@@ -8,11 +8,11 @@
     }
    },
    "source": [
-    "# A Very Quick Introduction to Git/Github for Julia Users\n",
+    "# Application for recording working hours\n",
     "\n",
     "Julia's package system and Github are very closely intertwined:\n",
     "\n",
-    "- Julia's package management system (METADATA) is a Github repository\n",
+    "- Define DATA_DIR\n",
     "- The packages are hosted as Github repositories\n",
     "- Julia packages are normally referred to with the ending “.jl”\n",
     "- Repositories register to become part of the central package management by sending a pull request to METADATA.jl\n",
