--- a/workinghours.ipynb
+++ b/workinghours.ipynb
@@ -13,11 +13,11 @@
     "Julia's package system and Github are very closely intertwined:\n",
     "\n",
     "- Define DATA_DIR\n",
-    "- The packages are hosted as Github repositories\n",
-    "- Julia packages are normally referred to with the ending “.jl”\n",
-    "- Repositories register to become part of the central package management by sending a pull request to METADATA.jl\n",
-    "- The packages can be found / investigated at Github.com\n",
-    "- Julia's error messages are hyperlinks to the page in Github\n",
+    "- Make sure 'output.xls' is not open while executing this code\n",
+    "- Make sure to click enter after inserting the row to be evaluated\n",
+    "- Format of time in excel file: 15min=0,25, 30min=0,5, 45min=0,75\n",
+    "- Record every working day (if holiday then 'H' in the start time column)\n",
+    "- In output.xls you may have to set first column to 'date'\n",
     "\n",
     "Because of this, it's very useful for everyone using Julia to know a little bit about Git/Github."
    ]
