--- a/workinghours.ipynb
+++ b/workinghours.ipynb
@@ -16,6 +16,8 @@
     "- Format of time in excel file: 15min=0,25, 30min=0,5, 45min=0,75\n",
     "- Record every working day (if holiday then 'H' in the start time column)\n",
     "- In output.xls you may have to set first column to 'date'\n",
+    "\n",
+    "Because of this, it's very useful for everyone using Julia to know a little bit about Git/Github."
    ]
   },
   {
