--- a/testcode.ipynb
+++ b/testcode.ipynb
@@ -4,9 +4,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Header"
+    "A paragraph."
    ]
   },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello world!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "JavaScript code:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```javascript\n",
+    "console.log(\"Hello world!\");\n",
+    "```"
+   ]
+  }
  ],
  "metadata": {
   "kernelspec": {
@@ -30,4 +72,3 @@
  "nbformat": 4,
  "nbformat_minor": 0
 }
-
