--- a/anothertestingfile.ipynb
+++ b/anothertestingfile.ipynb
@@ -26,6 +26,22 @@
     "print(\"Hello world!\")"
    ]
   },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "JavaScript code:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```javascript\n",
+    "console.log(\"Hello world!\");\n",
+    "```"
+   ]
+  }
  ],
  "metadata": {
   "kernelspec": {
